// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client applies transformer 1`] = `
"@keyframes a { 
  from {-moz-appearance: none; appearance: none;} 
}"
`;

exports[`client applies transformer 2`] = `".a {-moz-appearance: none; appearance: none;}"`;

exports[`client applies transformer 3`] = `".b {animation-name: a;}"`;

exports[`client deletes properties 1`] = `".a {color: red;}"`;

exports[`client injects atomic rules 1`] = `".a {color: red;}"`;

exports[`client injects atomic rules 2`] = `".b {background-color: green;}"`;

exports[`client injects atomic rules 3`] = `".c {border-left-color: blue;}"`;

exports[`client injects atomic rules 4`] = `".d:hover {color: red;}"`;

exports[`client injects atomic rules 5`] = `".e:hover {background-color: green;}"`;

exports[`client injects atomic rules 6`] = `".f:hover {border-left-color: blue;}"`;

exports[`client injects atomic rules 7`] = `".g {color: red;}"`;

exports[`client injects atomic rules 8`] = `".h {background-color: green;}"`;

exports[`client injects atomic rules 9`] = `".i {border-left-color: blue;}"`;

exports[`client injects atomic rules 10`] = `".j:hover {color: red;}"`;

exports[`client injects atomic rules 11`] = `".k:hover {background-color: green;}"`;

exports[`client injects atomic rules 12`] = `".l:hover {border-left-color: blue;}"`;

exports[`client injects different combinations 1`] = `".a {color: red;}"`;

exports[`client injects different combinations 2`] = `".b {color: green;}"`;

exports[`client injects different combinations 3`] = `".c {color: blue;}"`;

exports[`client injects font face rule 1`] = `"@font-face {font-style: normal; font-weight: 400; src: url(https://fonts.gstatic.com/s/paytoneone/v10/0nksC9P7MfYHj2oFtYm2ChTtgPs.woff2) format('woff2'); font-family: a;}"`;

exports[`client injects font face rule 2`] = `".a {font-family: a;}"`;

exports[`client injects font face rule 3`] = `"@font-face {font-style: normal; font-weight: 400; src: url(https://fonts.gstatic.com/s/paytoneone/v10/0nksC9P7MfYHj2oFtYm2ChTjgPvNiA.woff2) format('woff2'); font-family: b;}"`;

exports[`client injects font face rule 4`] = `".b {font-family: b;}"`;

exports[`client injects font face rule 5`] = `".c {font-family: b,sans-serif;}"`;

exports[`client injects font face rule 6`] = `".d {font-family: sans-serif;}"`;

exports[`client injects keyframes rule 1`] = `
"@keyframes a { 
  from {color: red;} 
  to {color: green;} 
}"
`;

exports[`client injects keyframes rule 2`] = `".a {animation-name: a;}"`;

exports[`client injects keyframes rule 3`] = `
"@keyframes b { 
  from {color: blue;} 
  to {color: white;} 
}"
`;

exports[`client injects keyframes rule 4`] = `".b {animation-name: b;}"`;

exports[`client injects keyframes rule 5`] = `".c {animation-name: some-thing;}"`;

exports[`client injects media rule 1`] = `".c {color: red;}"`;

exports[`client injects nested pseudo rule 1`] = `".a:first-child:hover {color: red;}"`;

exports[`client injects non-atomic rules 1`] = `".a {color: red; background-color: green; border-left-color: blue;}"`;

exports[`client injects non-atomic rules 2`] = `".b:hover {color: red; background-color: green; border-color: blue;}"`;

exports[`client injects non-atomic rules 3`] = `".c {color: red; background-color: green; border-color: blue;}"`;

exports[`client injects non-atomic rules 4`] = `".d:hover {color: red; background-color: green; border-color: blue;}"`;

exports[`client injects plain rule 1`] = `".a {color: red;}"`;

exports[`client injects pseudo rule 1`] = `".b:hover {color: red;}"`;

exports[`client injects rule deeply 1`] = `".a {color: red;}"`;

exports[`client injects rule deeply 2`] = `".b {padding-left: 20px;}"`;

exports[`client injects rule deeply 3`] = `".c:hover {color: red;}"`;

exports[`client injects rule deeply 4`] = `".d:first-child:hover {color: red;}"`;

exports[`client injects rule deeply 5`] = `
"@keyframes a { 
  from {color: green;} 
  to {color: blue;} 
}"
`;

exports[`client injects rule deeply 6`] = `".e {animation-name: a;}"`;

exports[`client injects rule deeply 7`] = `
"@keyframes b { 
  from {color: white;} 
  to {color: black;} 
}"
`;

exports[`client injects rule deeply 8`] = `".f {animation-name: b;}"`;

exports[`client injects rule deeply 9`] = `"@font-face {src: url(https://fonts.gstatic.com/s/paytoneone/v10/0nksC9P7MfYHj2oFtYm2ChTjgPvNiA.woff2) format('woff2'); font-family: a;}"`;

exports[`client injects rule deeply 10`] = `".g {font-family: a;}"`;

exports[`client injects rule deeply 11`] = `"@font-face {src: url(https://fonts.gstatic.com/s/paytoneone/v10/0nksC9P7MfYHj2oFtYm2ChTtgPs.woff2) format('woff2'); font-family: b;}"`;

exports[`client injects rule deeply 12`] = `".h {font-family: b;}"`;

exports[`client injects rule deeply 13`] = `".i {color: red;}"`;

exports[`client injects rule deeply 14`] = `".j:hover {color: red;}"`;

exports[`client injects shorthand rule 1`] = `".a {padding-left: 10px;}"`;

exports[`client injects shorthand rule 2`] = `".b {padding-right: 10px;}"`;

exports[`client injects shorthand rule 3`] = `".c {padding-top: 10px;}"`;

exports[`client injects shorthand rule 4`] = `".d {padding-bottom: 10px;}"`;

exports[`client injects shorthand rule 5`] = `".e {grid-column-gap: 10px;}"`;

exports[`client injects shorthand rule 6`] = `".f {margin-left: 10px;}"`;

exports[`client injects shorthand rule 7`] = `".g {margin-right: 10px;}"`;

exports[`client injects shorthand rule 8`] = `".h {margin-top: 10px;}"`;

exports[`client injects shorthand rule 9`] = `".i {margin-bottom: 10px;}"`;

exports[`client injects shorthand rule 10`] = `".j {margin-left: 20px;}"`;

exports[`client injects shorthand rule 11`] = `".k {margin-right: 20px;}"`;

exports[`client injects shorthand rule 12`] = `".l {margin-top: 20px;}"`;

exports[`client injects shorthand rule 13`] = `".m {margin-bottom: 20px;}"`;

exports[`client injects shorthand rule 14`] = `".n {padding-left: 30px;}"`;

exports[`client injects shorthand rule 15`] = `
"@keyframes a { 
  from {padding-left: 20px;} 
}"
`;

exports[`client injects shorthand rule 16`] = `".o {animation-name: a;}"`;

exports[`client injects shorthand rule 17`] = `"@font-face {font-weight: bold; font-family: a;}"`;

exports[`client injects shorthand rule 18`] = `".p {font-family: a;}"`;

exports[`client injects shorthand rule 19`] = `".q {border-left-width: 0;}"`;

exports[`client injects shorthand rule 20`] = `".r {border-right-width: 0;}"`;

exports[`client injects shorthand rule 21`] = `".s {border-top-width: 0;}"`;

exports[`client injects shorthand rule 22`] = `".t {border-bottom-width: 0;}"`;

exports[`client injects shorthand rule 23`] = `".u {border-left-color: red;}"`;

exports[`client injects shorthand rule 24`] = `".v {border-right-color: red;}"`;

exports[`client injects shorthand rule 25`] = `".w {border-top-color: green;}"`;

exports[`client injects shorthand rule 26`] = `".x {border-bottom-color: green;}"`;

exports[`client injects shorthand rule 27`] = `".y {border-top-left-radius: 0;}"`;

exports[`client injects shorthand rule 28`] = `".z {border-top-right-radius: 0;}"`;

exports[`client injects shorthand rule 29`] = `".a0 {border-bottom-left-radius: 0;}"`;

exports[`client injects shorthand rule 30`] = `".a1 {border-bottom-right-radius: 0;}"`;

exports[`client injects shorthand rule 31`] = `".a2 {border-right-width: 10px;}"`;

exports[`client injects shorthand rule 32`] = `".a3 {border-left-width: 20px;}"`;

exports[`client passes theme 1`] = `".a {color: red;}"`;

exports[`client preserves order 1`] = `".a {padding-top: 20px;}"`;

exports[`client preserves order 2`] = `".b {color: red;}"`;

exports[`client preserves order 3`] = `".c {padding-right: 30px;}"`;

exports[`client preserves order 4`] = `".d:hover {color: green;}"`;

exports[`client preserves order 5`] = `".e {padding-left: 30px;}"`;

exports[`client preserves order 6`] = `".a {padding-top: 20px; color: red; padding-right: 30px; padding-left: 30px;}"`;

exports[`client preserves order 7`] = `".b:hover {color: green;}"`;
